--- a/MvvmTools/packages.config
+++ b/MvvmTools/packages.config
@@ -1,14 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.2.0" targetFramework="net45" userInstalled="true" />
-  <package id="JetBrains.Annotations.Redist" version="7.1.0" targetFramework="net45" userInstalled="true" />
-  <package id="Microsoft.VisualStudio.SDK.VsixSuppression" version="14.0.50420-pre" targetFramework="net45" userInstalled="true" />
-  <package id="Ninject" version="3.2.2" targetFramework="net45" userInstalled="true" />
-  <package id="Prism" version="5.0.0" targetFramework="net45" userInstalled="true" />
-  <package id="Prism.Composition" version="5.0.0" targetFramework="net45" userInstalled="true" />
-  <package id="Prism.Interactivity" version="5.0.0" targetFramework="net45" userInstalled="true" />
-  <package id="Prism.Mvvm" version="1.0.0" targetFramework="net45" userInstalled="true" />
-  <package id="Prism.PubSubEvents" version="1.0.0" targetFramework="net45" userInstalled="true" />
-  <package id="Prism.UnityExtensions" version="5.0.1" targetFramework="net45" userInstalled="true" />
-  <package id="Unity" version="3.5.1404" targetFramework="net45" userInstalled="true" />
+  <package id="JetBrains.Annotations" version="9.1.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Imaging" version="14.0.22823-RC" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.SDK.VsixSuppression" version="14.0.50430-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.14.0" version="14.0.22823-RC" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="10.0.30319-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="11.0.50727-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="12.0.21003-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.14.0" version="14.0.22823-RC" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6071-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30319-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61030-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30110-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50727-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50727-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Threading" version="14.0.50522-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Utilities" version="14.0.22823-RC" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.VisualStudio.Validation" version="14.0.50417-pre" targetFramework="net45" userInstalled="true" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" userInstalled="true" />
 </packages>
